--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ hr {
   margin: 0;
 }
 
-#myUL li a {
+li {
   border: 1px solid #ddd; /* Add a border to all links */
   margin-top: -1px; /* Prevent double borders */
   background-color: #f6f6f6; /* Grey background color */
