--- a/css/style.css
+++ b/css/style.css
@@ -85,17 +85,13 @@ hr {
   margin: 0;
 }
 
-li {
+span {
   border: 1px solid #ddd; /* Add a border to all links */
   margin-top: -1px; /* Prevent double borders */
   background-color: #f6f6f6; /* Grey background color */
-  padding: 12px; /* Add some padding */
+  /* padding: 12px; /* Add some padding */ */
   text-decoration: none; /* Remove default text underline */
   font-size: 12px; /* Increase the font-size */
   color: black; /* Add a black text color */
-  display: block; /* Make it into a block element to fill the whole list */
-}
-
-.list li a:hover:not(.header) {
-  background-color: #eee; /* Add a hover effect to all links, except for headers */
+  /* display: block; /* Make it into a block element to fill the whole list */ */
 }
